--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-blog",
   "description": "Site built with Nuxt.js, inspired by material design",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": {
     "name": "STay Chan",
     "email": "mestayinloves@gmail.com",
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "nuxt",
-    "gen": "nuxt generate"
+    "gen": "nuxt generate",
+    "build": "nuxt build -a"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0"
+    "stylus-loader": "^2.4.0",
+    "webpack-bundle-analyzer": "^2.2.3"
   }
 }
