--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "nuxt",
     "gen": "nuxt generate",
-    "build": "nuxt build -a"
+    "build": "nuxt build -a",
+    "lint": "eslint --ext .js,.vue . --fix"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -26,6 +27,12 @@
     "nuxt": "^0.9.6"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "webpack-bundle-analyzer": "^2.2.3"
